--- a/TODO.txt
+++ b/TODO.txt
@@ -19,3 +19,14 @@ Research two motors on single gearbox
     should they be tuned to send same power
     Does this require indepetnedt speed conrollers
     
+Look into sensors:
+    encoders
+    distance sensors
+    gyro 
+    accelerometer
+    potentiometer
+    limit switch
+
+Logging
+    Corrolate log to video feed
+Scouting System
