--- a/TODO.txt
+++ b/TODO.txt
@@ -1,34 +1,11 @@
-Dashboard - Aaron
-    Add feedback:
-        Gear-mode
-Vision - Aaron
-Autonomous - Thomas
-	Modes?
-	Hot or not?
-    Drive until near wall
-cRios - Image (Done)
-Git
-	New Java project (Done)
-	New Dashboard project (Done)
-Code - Chance
-	Initial project
-	Drive train
-        Switch to tank drive
-    Encoders
-        PID
-
-Research two motors on single gearbox
-    should they be tuned to send same power
-    Does this require indepetnedt speed conrollers
-    
-Look into sensors:
-    encoders
-    distance sensors
-    gyro 
-    accelerometer
-    potentiometer
-    limit switch
-
-Logging
-    Corrolate log to video feed
-Scouting System
+Test Mode
+Change camera settings after (and during) autonomous
+Save video feed
+Implement Logging Levels
+Test vision in different environments
+    Validate in different lighting conditions
+    Validate with autonomous
+Add move to autonomous
+Make sure we drive straight in autonomous
+Clean up comments
+Figure out intake system
